--- a/parkingsystem/parkingsystem/pom.xml
+++ b/parkingsystem/parkingsystem/pom.xml
@@ -46,6 +46,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.22.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
 			<version>2.23.4</version>
@@ -62,6 +68,8 @@
 			<artifactId>maven-assembly-plugin</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
