--- a/parkingsystem/parkingsystem/pom.xml
+++ b/parkingsystem/parkingsystem/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.parkit</groupId>
 	<artifactId>parking-system</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0 <!-- -SNAPSHOT --></version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -95,7 +95,7 @@
 								</manifest>
 							</archive>
 							<descriptors>
-								<descriptor>parkingsystem_parkingsystem/assembly.xml</descriptor>
+								<descriptor>assembly.xml</descriptor>
 							</descriptors>
 						</configuration>
 					</execution>
